--- a/templates/edit_note.html
+++ b/templates/edit_note.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>New Note</title>
+    <title>{{ title }}</title>
     {{ static_file('css', 'style.css') }}
     <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
 </head>
@@ -13,7 +13,7 @@
     <a href="{{ url_for('index') }}">
         <button class="btn btn-primary"><-Back</button>
     </a>
-    <h1>New Note</h1>
+    <h1>{{ title }}</h1>
     <form method="post">
         {{ form.csrf_token }}
         <div class="form-group">
